--- a/live_better/package.json
+++ b/live_better/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.9",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.8",
+    "axios": "^1.8.1",
     "lucide-react": "^0.477.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
