--- a/live_better/package.json
+++ b/live_better/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.477.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "typescript": "^5.8.2"
   },
   "devDependencies": {
