--- a/live_better/package.json
+++ b/live_better/package.json
@@ -13,9 +13,10 @@
     "@tailwindcss/vite": "^4.0.9",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.8",
-    "axios": "^1.8.1",
+    "axios": "^1.8.2",
     "lucide-react": "^0.477.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "typescript": "^5.8.2"
